# power-box

./: PROJECT_OVERVIEW.md  README.md  SETUP_COMPLETE.md  build.bat  power-box.py  pyproject.toml  requirements.txt
docs/: deployment.md  quick-start.md
src/: __init__.py  ch341.py  ch341_device.py  cli.py  eeprom.py  ina226.py  main.py  relay.py
src/i2c_tools/: ch341_device.py  i2c_adapter.py
tests/: test_basic.py
